--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
+<!--
+CS7443
+Scientific Information Visualization
+Dr. Bijaya Karki
+Fall 2016
+
+Team:
+    Sandeep Ingale
+    Shungeng Zhang
+    Parsa Amini
+-->
+
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,8 +18,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="jscolor.min.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
 </head>
 <body onload="draw()">
     <div class="container-fluid">
@@ -17,38 +30,36 @@
             <div id="instructions">
                 <h3>Instructions</h3>
                 <ul>
-                    <li>To move dimension - Click on dimension label on the top and drag dimension</li>
-                    <li>To delete dimension - Double click on dimension label, unselected data will be in background, if want to remove background data then single click on dimension</li>
-                    <li>To include dimension back on the plot again double click on dimension label</li>
-                    <li>To explore data hover on data line-- A small label will be displayed</li>
-                    <li>To explore data - click on data line - Line will be highlighted with red color - To deselect again click on same line</li>
+                    <li>To move a dimension, click on dimension label on the top and drag dimension</li>
+                    <li>To delete a dimension, double click on dimension label, unselected data will be in background, if want to remove background data then single click on dimension</li>
+                    <li>To put a dimension back on the plot, double click on its label</li>
+                    <li>To explore data, hover the mouse curser on data line. A small label will be displayed</li>
+                    <li>To explore data, click on data line. Line will be highlighted in red. To deselect, click on the same line</li>
                     <li>To explore multiple datalines at same time, click on dimension axis and drag to till the line you want to explore</li>
-                    <li>To change the default color of all the lines - select color drop from side color box and click on draw button</li>
-                    <li>To plot data from other csv files just select csv file from dropdown and wait for a moment</li>
+                    <li>To change the default color of all the lines, select the desired color form the down menu on the side box and then click on the draw button</li>
+                    <li>To choose a different data set, select a different CSV file from dropdown. It may take a moment for the graph to display</li>
                 </ul>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="form-group">
                 <legend>
-                    <h3>Graph parameters</h3>
+                    <h3>Graph Parameters</h3>
                 </legend>
-                <label for="exampleSelect2">Select a input file</label>
+                <label for="exampleSelect2">Data Set</label>
                 <select class="form-control" id="ddlViewBy" onchange="draw()">
                     <option value="1">DataViscosity.csv</option>
                     <option value="2" selected="selected">DataCji.csv</option>
-                    <option value="3"></option>
                 </select>
             </div>
             <div class="form-group">
-                <label>Edit graph parameters</label>
-                <div>Select color:
+                <label>Graph Parameters</label>
+                <div>Color:
                     <input class="jscolor" value="ab2567" id="color">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary" onclick="draw()">Draw</button>
         </div>
     </div>
-    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
