--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ Team:
                 </legend>
                 <label for="exampleSelect2">Data Set</label>
                 <select class="form-control" id="ddlViewBy" onchange="draw()">
-                    <option value="data/DataCji.csv" selected="selected">Data C_ji</option>
-                    <option value="data/DataViscosity.csv">Data Viscosity</option>
+                    <option value="data/DataCji.csv" selected="selected">C_ji</option>
+                    <option value="data/DataMA.csv">MA</option>
+                    <option value="data/DataViscosity.csv">Viscosity</option>
                 </select>
             </div>
             <div class="form-group">
