--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Team:
                     <li>To select a data line click on it. It will be highlighted in red. To deselect a selected line, click on it.</li>
                     <li>To explore multiple datalines at same time, click on the dimension axis and drag it to the line you want to explore.</li>
                     <li>To change the default color for all lines, select the desired color form the color picker on the right side of the page and then click on the draw button.</li>
-                    <li>Choose between available data set by selecting them from the dropdown menu. Depending on your hardware and browser configuration it may take a few moments for the graph to update</li>
+                    <li>Choose between available data set by selecting them from the dropdown menu. Depending on the size of the data set and your hardware and browser configuration it may take a few moments for the graph to update</li>
                 </ul>
             </div>
         </div>
