--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ Team:
                     <li>To change the default color for all lines, select the desired color form the color picker on the right side of the page and then click on the draw button.</li>
                     <li>Choose between available data set by selecting them from the dropdown menu. Depending on the size of the data set and your hardware and browser configuration it may take a few moments for the graph to update</li>
                 </ul>
+				<p>Code for this project is located at: <a href="https://github.com/parsa/sciviz-class-proj">https://github.com/parsa/sciviz-class-proj</a></p>
             </div>
         </div>
         <div class="col-sm-3">
