Rename DataCji.csv to DataCij.csv. Update reference in index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Team:
                 </legend>
                 <label for="exampleSelect2">Data Set</label>
                 <select class="form-control" id="ddlViewBy" onchange="draw()">
-                    <option value="data/DataCji.csv" selected="selected">C_ji</option>
+                    <option value="data/DataCij.csv" selected="selected">C_ij</option>
                     <option value="data/DataMA.csv">MA</option>
                     <option value="data/DataViscosity.csv">Viscosity</option>
                 </select>
