--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ Team:
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet" />
+    <link href="assets/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="jscolor.min.js" type="text/javascript"></script>
+    <script src="assets/jscolor.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </head>
 <body onload="draw()">
